# GUI_wayland

./: CMakeLists.txt  FindCairo.cmake  FindGLib.cmake  README.md  main.cpp  test.cpp  xdg-shell-client-protocol.h
classes/: cairo_handler.cpp  cbutton.cpp  cframe.cpp  cgobject.cpp  cimage.cpp  clabel.cpp  color.cpp  handler.cpp
handlers/: c_keyboard_event_handler.cpp  cairo_handler.cpp  printer.cpp
